# reflexor

./: .dockerignore  .env.template  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SECURITY.md  alembic.ini  pyproject.toml
.github/: pip-audit-allowlist.txt  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_event_dedupe_unique_index.py  0003_run_packets_packet_version.py  0004_idempotency_ledger_table.py  0005_json_columns_to_jsonb_postgres.py  0006_event_suppressions_table.py  0007_event_suppressions_clear_audit.py  0008_memory_items_table.py  0009_event_dedupe_ledger.py  0010_bigint_ms_columns.py
deploy/k8s/: README.md
docker/: Dockerfile  README.md  docker-compose.yml  reflex_rules.json
docs/: api.md  architecture.md  cli.md  configuration.md  disaster_recovery.md  domain-models.md  executor.md  getting-started.md  hardening_checklist.md  memory.md  observability.md  orchestrator.md  planning.md  policy.md  prd_traceability.md  production_readiness.md  production_v0.2.md  queue.md  replay.md  runbooks.md  secrets.md  security_redaction.md  storage.md  threat_model.md  tools.md  upgrade_to_v1.md
examples/: README.md  __init__.py  inprocess_orchestrator.py
examples/approval_flow/: .env.example  README.md  __init__.py  run.py
examples/scheduled_planning_tick/: .env.example  README.md  __init__.py  mock_tool.json  run.py
examples/webhook_reflex_then_planning/: .env.example  README.md  __init__.py  reflex_rules.json  reflex_rules.yaml  run.py
scripts/: benchmark_event_to_enqueue.py  db_reset_dev.py  db_upgrade.py  pip_audit_gate.py  postgres_backup.py  postgres_restore.py  validate_k8s_manifests.py
src/reflexor/: __init__.py  config.py
tests/: architecture_utils.py  conftest.py  test_api_import.py  test_api_lifespan.py  test_architecture_guardrails.py  test_cli.py  test_config.py  test_config_validation.py  test_db_dependencies.py  test_domain_approval.py  test_domain_enums.py  test_domain_errors.py  test_domain_event.py  test_domain_lifecycle.py  test_domain_run_packet.py  test_domain_serialization.py  test_domain_task.py  test_domain_toolcall.py  test_import.py  test_migrations.py  test_observability_audit_sanitize.py  test_observability_context.py  test_observability_logging.py  test_observability_redaction.py  test_observability_truncation.py  test_security_secrets.py
tests/fixtures/: sandbox_registry.py  tools.py
tests/integration/: test_api_approvals_workflow.py  test_api_auth.py  test_api_endpoints.py  test_api_error_handling.py  test_api_events_ingest.py  test_api_health_and_metrics.py  test_api_healthz_queue_connectivity.py  test_api_middleware_logging.py  test_api_planning_execution_flow.py  test_api_runs_read.py  test_api_tasks_read.py  test_cli_runs_replay.py  test_cli_smoke.py  test_e2e_postgres_redis.py  test_event_suppression.py  test_executor_circuit_breaker_guard.py  test_executor_retry_scheduling.py  test_executor_run_packet_outcomes.py  test_executor_transitions.py  test_migrations.py  test_persistence_reflex_flow.py  test_postgres_migrations.py  test_postgres_migrations_and_repos.py  test_postgres_uow_connectivity.py  test_redis_circuit_breaker.py  test_redis_rate_limiter.py  test_redis_streams_queue.py  test_reflex_export_replay_determinism.py  test_replay_runner.py  test_run_packet_exporter.py  test_run_packet_sanitation.py  test_tool_entrypoints_hardening.py  test_tool_subprocess_sandbox_backend_integration.py  test_worker_approval_block.py  test_worker_idempotency_dedupe.py  test_worker_retry_flow.py  test_worker_runner.py
tests/unit/: test_application_architecture.py  test_benchmark_event_to_enqueue.py  test_bootstrap_architecture.py  test_bootstrap_container.py  test_cli_architecture.py  test_config_architecture.py  test_correlation_logging.py  test_db_engine_factory.py  test_db_json_variants.py  test_db_mappers.py  test_db_migrate.py  test_domain_contracts_single_source.py  test_domain_purity.py  test_executor_architecture.py  test_fs_safety.py  test_guard_chain.py  test_http_tool.py  test_in_memory_queue_concurrency.py  test_infra_architecture.py  (+55 more)
(+375 files in other folders)
