[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reflexor"
dynamic = ["version"]
description = "Reflexor"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "TODO", email = "todo@example.com" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "coverage[toml]==7.13.4",
  "mypy==1.19.1",
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0",
  "ruff==0.15.2",
]

[tool.hatch.version]
path = "src/reflexor/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/reflexor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["reflexor"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.ruff.lint.isort]
known-first-party = ["reflexor"]

[tool.ruff.lint.per-file-ignores]
"src/reflexor/__init__.py" = ["F401"]
